# django-launchpad

./: README.md  pyproject.toml
django_launchpad/: cli.py
