[tool.poetry]
name = "django-launchpad"
version = "0.1.0"
description = "Generate Django apps from structured JSON or YAML files"
authors = ["Maximilian Wolf <wunderkind.serie-0f@icloud.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
